Feature: Tools feature finished.
